--- a/MediaSelector/src/main/res/values-zh/strings.xml
+++ b/MediaSelector/src/main/res/values-zh/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="media_selector_confirm_button_pattern">确认(%1$d/%2$d)</string>
+    <string name="media_selector_confirm_indicator">%1$d/%2$d</string>
 </resources>
