--- a/MediaSelector/src/main/res/values/strings.xml
+++ b/MediaSelector/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="media_selector_confirm_button_pattern">Confirm(%1$d/%2$d)</string>
     <string name="media_selector_confirm_indicator">%1$d/%2$d</string>
+    <string name="media_selector_select_button">Select(%1$d/%2$d)</string>
 </resources>
