--- a/MediaSelector/src/main/res/values-zh/strings.xml
+++ b/MediaSelector/src/main/res/values-zh/strings.xml
@@ -5,4 +5,5 @@
     <string name="media_selector_confirm_button_pattern">确认 (%1$d/%2$d)</string>
     <string name="media_selector_confirm_indicator">%1$d/%2$d</string>
     <string name="media_selector_select_button">选择 (%1$d/%2$d)</string>
+    <string name="media_selector_select_background">选择背景图片</string>
 </resources>
