--- a/MediaSelector/src/main/res/values/strings.xml
+++ b/MediaSelector/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="media_selector_confirm_button_pattern">Confirm (%1$d/%2$d)</string>
     <string name="media_selector_confirm_indicator">%1$d/%2$d</string>
     <string name="media_selector_select_button">Select (%1$d/%2$d)</string>
+    <string name="media_selector_select_background">Select Background Image</string>
 </resources>
